# libbrasa

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  runbuild
.circleci/: config.yml
cmake/: CppCheck.cmake  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  UnitTest.cmake
demos/: CMakeLists.txt
demos/argparse/: CMakeLists.txt  argparse.cpp
demos/buffer/: CMakeLists.txt  buffer.cpp
src/: CMakeLists.txt
src/brasa/: CMakeLists.txt
src/brasa/argparse/: ArgParser.cpp  ArgParser.h  CMakeLists.txt  Parsers.cpp  Parsers.h  README.md  Values.cpp  Values.h
src/brasa/buffer/: CMakeLists.txt  CRC.cpp  CRC.h  Circular.cpp  Circular.h  CircularReader.cpp  CircularReader.h  CircularWriter.cpp  CircularWriter.h  Copy.cpp  Copy.h  README.md
src/brasa/chronometer/: Chronometer.h  Constants.h  NowClock.h  NowStd.h  Wait.h
src/brasa/chronus/: CMakeLists.txt  Chronometer.cpp  Chronometer.h  Constants.cpp  Constants.h  Now.cpp  Now.h  NowClock.cpp  NowClock.h  NowStd.cpp  NowStd.h  README.md  SleepStd.cpp  SleepStd.h  Sleeper.h  Wait.h  Waiter.cpp  Waiter.h
src/brasa/instrument/: CMakeLists.txt  Instrumented.cpp  Instrumented.h  Singleton.cpp  Singleton.h
src/brasa/patterns/: README.md
src/brasa/patterns/factory/: CMakeLists.txt  ObjectFactory.cpp  ObjectFactory.h  ObjectRepository.cpp  ObjectRepository.h
src/brasa/patterns/singleton/: CMakeLists.txt  README.md  Singleton.cpp  Singleton.h
src/brasa/safe_type/: CMakeLists.txt  README.md  SafeType.cpp  SafeType.h  SafeType.md  SafeTypeHash.cpp  SafeTypeHash.h  SafeTypeHash.md  SafeTypeImpl.cpp  SafeTypeImpl.h
src/brasa/thread/: CMakeLists.txt  Rcu.cpp  Rcu.h  RcuReader.cpp  RcuReader.h  RcuWriter.cpp  RcuWriter.h
src/brasa/type_safe/: CMakeLists.txt  README.md  TypeSafe.cpp  TypeSafe.h  TypeSafeImpl.cpp  TypeSafeImpl.h
test/: CMakeLists.txt  gtest_main.cpp
test/brasa/: CMakeLists.txt
test/brasa/argparse/: ArgParserTest.cpp  CMakeLists.txt  ParsersTest.cpp  ValuesTest.cpp
test/brasa/buffer/: CMakeLists.txt  CRCTest.cpp  CircularHelper.h  CircularReaderTest.cpp  CircularTest.cpp  CircularWriterTest.cpp  CopyBenchmark.cpp  CopyTest.cpp
test/brasa/chronometer/: CMakeLists.txt  ChronometerTest.cpp  NowStdTest.cpp  NowTest.cpp  WaitTest.cpp
test/brasa/chronus/: CMakeLists.txt  ChronometerTest.cpp  NowTest.cpp  SleepStdTest.cpp  SleeperTest.cpp  WaitTest.cpp  WaiterTest.cpp
test/brasa/instrument/: CMakeLists.txt  InstrumentedTest.cpp  SingletonTest.cpp
test/brasa/patterns/: CMakeLists.txt
test/brasa/patterns/factory/: CMakeLists.txt  ObjectFactoryTest.cpp  ObjectRepositoryTest.cpp
test/brasa/patterns/singleton/: CMakeLists.txt  SingletonTest.cpp
test/brasa/safe_type/: CMakeLists.txt  SafeTypeTest.cpp
test/brasa/thread/: CMakeLists.txt  RcuReaderTest.cpp  RcuTest.cpp  RcuWriterTest.cpp  classes.h
test/brasa/type_safe/: CMakeLists.txt  TypeSafeTest.cpp
